# functional_connectivity

./: .gitignore  Dockerfile  README.md  env.yml  pyproject.toml
src/functional_connectivity/: datasets.py  task_runners.py  utils.py
src/functional_connectivity/cli/: functional_connectivity.py
src/functional_connectivity/data/: fan.csv  power2011.csv
src/functional_connectivity/data/gordon_2016/: Parcels.tsv
src/functional_connectivity/flows/: connectivity.py
src/functional_connectivity/task/: compcor.py  img.py  utils.py
src/postfmriprep/: datasets.py  utils.py
src/postfmriprep/cli/: postfmriprep.py
src/postfmriprep/data/: dmn.csv
src/postfmriprep/flows/: connectivity.py  signature.py
src/postfmriprep/task/: compcor.py  imgs.py  utils.py
tests/: datasets.py
tools/: download_data.py
